unpackaged/main/default/objects/Part_Information__c/Part_Information__c.object-meta.xml
<CustomObject>
    <label>Part Information</label>
    <nameField>
        <label>Part ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>