unpackaged/main/default/objects/Part_Information__c/fields/hasHTSCode__c.field-meta.xml
<CustomField>
    <fullName>hasHTSCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has HTS Code?</label>
    <type>Checkbox</type>
</CustomField>