unpackaged/main/default/objects/Part_Information__c/fields/hasImportReason__c.field-meta.xml
<CustomField>
    <fullName>hasImportReason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Import Reason?</label>
    <type>Checkbox</type>
</CustomField>