unpackaged/main/default/objects/Part_Information__c/fields/hasIndustry__c.field-meta.xml
<CustomField>
    <fullName>hasIndustry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Industry?</label>
    <type>Checkbox</type>
</CustomField>