unpackaged/main/default/objects/Part_Information__c/fields/hasPartDescription__c.field-meta.xml
<CustomField>
    <fullName>hasPartDescription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Part Description?</label>
    <type>Checkbox</type>
</CustomField>