unpackaged/main/default/objects/Part_Information__c/fields/Only_HTS_Missing__c.field-meta.xml
<CustomField>
    <fullName>Only_HTS_Missing__c</fullName>
    <formula>AND(!hasHTSCode__c, hasIndustry__c, hasImportReason__c, hasPartDescription__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Only HTS Missing</label>
    <type>Checkbox</type>
</CustomField>