unpackaged/main/default/objects/Part_Information__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <label>Order ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>