unpackaged/main/default/objects/Part_Information__c/fields/PartHistory__c.field-meta.xml
<CustomField>
    <fullName>PartHistory__c</fullName>
    <label>Part History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>