unpackaged/main/default/objects/Part_Information__c/fields/PartID__c.field-meta.xml
<CustomField>
    <fullName>PartID__c</fullName>
    <externalId>true</externalId>
    <label>Part ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>