unpackaged/main/default/objects/Part_Information__c/fields/ReadyToShip__c.field-meta.xml
<CustomField>
    <fullName>ReadyToShip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready To Ship?</label>
    <type>Checkbox</type>
</CustomField>