unpackaged/main/default/objects/Part_Information__c/fields/Reorder__c.field-meta.xml
<CustomField>
    <fullName>Reorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reorder?</label>
    <type>Checkbox</type>
</CustomField>