unpackaged/main/default/objects/Part_Information__c/fields/Requote__c.field-meta.xml
<CustomField>
    <fullName>Requote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requote?</label>
    <type>Checkbox</type>
</CustomField>